# Dift

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
dift/: batch.py  cli.py  history.py  profiles.py  schedules.py  thresholds.py
dift/core/: comparator.py  quality_diff.py  risk.py  row_diff.py  stats_diff.py
dift/io/: __init__.py  config_loader.py  readers.py
dift/reports/: console_report.py  csv_report.py  excel_report.py  html_report.py  json_report.py  models.py
docs/: dift_cheat_sheet.md
examples/: config_env.yaml  config_sample.json  config_sample.toml  config_sample.yaml  config_sample.ymal  config_thresholds.yaml  config_with_datasets.json  config_with_datasets.toml  config_with_datasets.yaml  new_categorical.csv  new_drift.csv  new_outliers.csv  old_categorical.csv  old_drift.csv  old_outliers.csv
tests/: test_cli.py  test_cli_errors.py  test_config_file.py  test_exit_codes.py  test_html_report.py  test_json_report.py  test_qualitydiff.py  test_risk.py  test_schedule.py  test_stats_diff.py
